# django-auto-actions

./: .coveragerc  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  requirements.txt  runtests.py  setup.py
.github/: pull_request_template.md
.github/workflows/: test.yml
django_auto_actions/: __init__.py  main.py
django_auto_actions/tests/: runtests.py  test_main.py
